--- a/src/UI/Histories.xaml
+++ b/src/UI/Histories.xaml
@@ -45,7 +45,7 @@
                         <Path Width="12" Height="12" Fill="{StaticResource Brush.FG2}" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Clear}"/>
                     </Button>
                     <Button Margin="8,0,0,0" ToolTip="CLOSE" Click="HideSearchBarByButton">
-                        <Path Width="12" Height="12" Fill="{StaticResource Brush.FG2}" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Collapse}"/>
+                        <Path Width="12" Height="12" Fill="{StaticResource Brush.FG2}" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Up}"/>
                     </Button>
                 </StackPanel>
             </Grid>
