--- a/src/UI/DiffViewer.xaml
+++ b/src/UI/DiffViewer.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
+             xmlns:sourcegit="clr-namespace:SourceGit"
+             mc:Ignorable="d"
              FontFamily="Consolas">
     <Border BorderThickness="1" BorderBrush="{StaticResource Brush.Border2}">
         <Grid>
@@ -32,7 +33,7 @@
                         <Path x:Name="loading" Width="10" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Loading}"/>
                     </StackPanel>
 
-                    <StackPanel Grid.Column="2" x:Name="diffNavigation" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <StackPanel Grid.Column="2" x:Name="textChangeOptions" Orientation="Horizontal" HorizontalAlignment="Right">
                         <Button Width="26" Click="Go2Next" ToolTip="Next Difference" Background="Transparent">
                             <Path Width="10" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.MoveDown}"/>
                         </Button>
@@ -40,126 +41,149 @@
                         <Button Click="Go2Prev" ToolTip="Previous Difference" Background="Transparent">
                             <Path Width="10" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.MoveUp}"/>
                         </Button>
+
+                        <ToggleButton
+                            Margin="8,0,0,0"
+                            Style="{StaticResource Style.ToggleButton.SplitDirection}"
+                            ToolTip="Toggle One-Side/Two-Sides"
+                            IsChecked="{Binding Source={x:Static sourcegit:App.Preference}, Path=UIUseOneSideDiff, Mode=TwoWay}"
+                            Checked="ChangeDiffMode" Unchecked="ChangeDiffMode"/>
                     </StackPanel>
                 </Grid>
             </Border>
 
             <Grid x:Name="textChange" Grid.Row="1" ClipToBounds="True">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" MinWidth="100"/>
-                    <ColumnDefinition Width="2"/>
+                    <ColumnDefinition Width="4"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="4"/>
+                    <ColumnDefinition Width="1"/>
+                    <ColumnDefinition x:Name="twoSideLeft"/>
+                    <ColumnDefinition x:Name="twoSideSplittter" Width="1"/>
+                    <ColumnDefinition Width="4"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="4"/>
+                    <ColumnDefinition Width="1"/>
                     <ColumnDefinition Width="*" MinWidth="100"/>
                 </Grid.ColumnDefinitions>
 
-                <Grid Grid.Column="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="1"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                <ItemsControl
+                    Grid.Column="1"
+                    x:Name="leftLineNumber"
+                    Padding="0"
+                    Margin="0"
+                    BorderThickness="0"
+                    Background="Transparent"
+                    VirtualizingPanel.ScrollUnit="Item"
+                    VirtualizingPanel.IsVirtualizing="True"
+                    VirtualizingPanel.VirtualizationMode="Recycling">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel Orientation="Vertical"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
 
-                    <TextBox
-                        x:Name="leftLineNumber"
-                        Grid.Column="0"
-                        AcceptsReturn="True"
-                        AcceptsTab="True"
-                        BorderThickness="0"
-                        Background="Transparent"
-                        IsReadOnly="True"
-                        Padding="2,0"
-                        Margin="0"
-                        FontSize="13"
-                        HorizontalContentAlignment="Right"
-                        VerticalAlignment="Stretch"/>
+                    <ItemsControl.Template>
+                        <ControlTemplate TargetType="{x:Type ItemsControl}">
+                            <ScrollViewer CanContentScroll="True" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Disabled">
+                                <ItemsPresenter/>
+                            </ScrollViewer>
+                        </ControlTemplate>
+                    </ItemsControl.Template>
 
-                    <Rectangle Grid.Column="1" Width="1" Fill="{StaticResource Brush.Border2}"/>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding .}" Padding="0" Margin="0" FontFamily="Consolas" FontSize="13" HorizontalAlignment="Right" VerticalAlignment="Center" Foreground="{StaticResource Brush.FG}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
 
-                    <RichTextBox
-                        x:Name="leftText"
-                        Grid.Column="2"
-                        AcceptsReturn="True"
-                        AcceptsTab="True"
-                        IsReadOnly="True"
-                        BorderThickness="0"
-                        Background="Transparent"
-                        Foreground="{StaticResource Brush.FG}"
-                        Height="Auto"
-                        FontSize="13"
-                        HorizontalScrollBarVisibility="Auto"
-                        VerticalScrollBarVisibility="Auto"
-                        RenderOptions.ClearTypeHint="Enabled"
-                        ScrollViewer.ScrollChanged="OnViewerScroll"
-                        PreviewMouseWheel="OnViewerMouseWheel"
-                        SizeChanged="LeftSizeChanged"
-                        SelectionChanged="OnViewerSelectionChanged"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch">
-                        <RichTextBox.Document>
-                            <FlowDocument PageWidth="0"/>
-                        </RichTextBox.Document>
-                        <RichTextBox.ContextMenu>
-                            <ContextMenu>
-                                <MenuItem Command="ApplicationCommands.Copy"/>
-                            </ContextMenu>
-                        </RichTextBox.ContextMenu>
-                    </RichTextBox>
-                </Grid>
+                <Rectangle Grid.Column="3" Width="1" Fill="{StaticResource Brush.Border2}"/>
 
-                <GridSplitter Grid.Column="1" Width="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{StaticResource Brush.Border2}"/>
+                <RichTextBox
+                    x:Name="leftText"
+                    Grid.Column="4"
+                    AcceptsReturn="True"
+                    AcceptsTab="True"
+                    IsReadOnly="True"
+                    BorderThickness="0"
+                    Background="Transparent"
+                    Foreground="{StaticResource Brush.FG}"
+                    Height="Auto"
+                    FontSize="13"
+                    HorizontalScrollBarVisibility="Auto"
+                    VerticalScrollBarVisibility="Auto"
+                    RenderOptions.ClearTypeHint="Enabled"
+                    ScrollViewer.ScrollChanged="OnViewerScroll"
+                    PreviewMouseWheel="OnViewerMouseWheel"
+                    SizeChanged="OnSizeChanged"
+                    SelectionChanged="OnViewerSelectionChanged"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch">
+                    <RichTextBox.Document>
+                        <FlowDocument PageWidth="0"/>
+                    </RichTextBox.Document>
+                </RichTextBox>
 
-                <Grid Grid.Column="2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="1"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                <Rectangle Grid.Column="5" Width="1" Fill="{StaticResource Brush.Border2}"/>
 
-                    <TextBox
-                        x:Name="rightLineNumber"
-                        Grid.Column="0"
-                        AcceptsReturn="True"
-                        AcceptsTab="True"
-                        IsReadOnly="True"
-                        BorderThickness="0"
-                        Background="Transparent"
-                        Padding="2,0"
-                        Margin="0"
-                        FontSize="13"
-                        HorizontalContentAlignment="Right"
-                        VerticalAlignment="Stretch"/>
+                <ItemsControl
+                    Grid.Column="7"
+                    x:Name="rightLineNumber"
+                    Padding="0"
+                    Margin="0"
+                    BorderThickness="0"
+                    Background="Transparent"
+                    VirtualizingPanel.ScrollUnit="Item"
+                    VirtualizingPanel.IsVirtualizing="True"
+                    VirtualizingPanel.VirtualizationMode="Recycling">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel Orientation="Vertical"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
 
-                    <Rectangle Grid.Column="1" Width="1" Fill="{StaticResource Brush.Border2}"/>
+                    <ItemsControl.Template>
+                        <ControlTemplate TargetType="{x:Type ItemsControl}">
+                            <ScrollViewer CanContentScroll="True" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Disabled">
+                                <ItemsPresenter/>
+                            </ScrollViewer>
+                        </ControlTemplate>
+                    </ItemsControl.Template>
 
-                    <RichTextBox
-                        x:Name="rightText"
-                        Grid.Column="2"
-                        AcceptsReturn="True"
-                        AcceptsTab="True"
-                        IsReadOnly="True"
-                        BorderThickness="0"
-                        Background="Transparent"
-                        Foreground="{StaticResource Brush.FG}"
-                        Height="Auto"
-                        FontSize="13"
-                        HorizontalScrollBarVisibility="Auto"
-                        VerticalScrollBarVisibility="Auto"
-                        RenderOptions.ClearTypeHint="Enabled"
-                        ScrollViewer.ScrollChanged="OnViewerScroll"
-                        PreviewMouseWheel="OnViewerMouseWheel"
-                        SizeChanged="RightSizeChanged"
-                        SelectionChanged="OnViewerSelectionChanged"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch">
-                        <RichTextBox.Document>
-                            <FlowDocument PageWidth="0"/>
-                        </RichTextBox.Document>
-                        <RichTextBox.ContextMenu>
-                            <ContextMenu>
-                                <MenuItem Command="ApplicationCommands.Copy"/>
-                            </ContextMenu>
-                        </RichTextBox.ContextMenu>
-                    </RichTextBox>
-                </Grid>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding .}" Padding="0" Margin="0" FontFamily="Consolas" FontSize="13" HorizontalAlignment="Right" VerticalAlignment="Center" Foreground="{StaticResource Brush.FG}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+
+                <Rectangle Grid.Column="9" Width="1" Fill="{StaticResource Brush.Border2}"/>
+
+                <RichTextBox
+                    x:Name="rightText"
+                    Grid.Column="10"
+                    AcceptsReturn="True"
+                    AcceptsTab="True"
+                    IsReadOnly="True"
+                    BorderThickness="0"
+                    Background="Transparent"
+                    Foreground="{StaticResource Brush.FG}"
+                    Height="Auto"
+                    FontSize="13"
+                    HorizontalScrollBarVisibility="Auto"
+                    VerticalScrollBarVisibility="Auto"
+                    RenderOptions.ClearTypeHint="Enabled"
+                    ScrollViewer.ScrollChanged="OnViewerScroll"
+                    PreviewMouseWheel="OnViewerMouseWheel"
+                    SizeChanged="OnSizeChanged"
+                    SelectionChanged="OnViewerSelectionChanged"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch">
+                    <RichTextBox.Document>
+                        <FlowDocument PageWidth="0"/>
+                    </RichTextBox.Document>
+                </RichTextBox>
             </Grid>
 
             <Border x:Name="sizeChange" Grid.Row="1" ClipToBounds="True" Background="{StaticResource Brush.BG3}" Visibility="Collapsed">
